Wed Mar  7 10:56:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Fixed coverity error

Wed Mar  7 10:03:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for release

Wed Mar 07 09:04:40 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.0 released.

Tue Feb 28 19:26:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/Getter_T.cpp:
        * connectors/dds4ccm/tests/LateBinding/ReadGet/Sender/RG_LateBinding_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ResetTopic/ReadGet/Sender/RG_ResetTopic_Sender_exec.cpp:
          Fixed coverity errors

Thu Feb 23 14:16:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DAnCE/LocalityManager/CommandlinePassage/Component_OpenMode.cdp:
          Use the OpenMode as configProperty

Thu Feb 23 12:27:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
        * ciao/Base/CIAO_Properties.idl:
        * ciao/Containers/Container_Base.idl:
        * ciao/Containers/Container_Base_T.h:
        * ciao/Containers/Container_Base_T.cpp:
        * ciao/Containers/Extension/Extension_Container.h:
        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Containers/Session/Session_Container.h:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Deployment/Handlers/Component_Handler.cpp:
        * ciao/Deployment/Handlers/Container_Handler.cpp:
        * ciao/Deployment/Handlers/Home_Handler.cpp:
          Added support for new ciao config property "edu.vanderbilt.dre.CIAO.OpenMode"
          which controls the mode that is used to load the shared libraries for
          a home or component. By default we use ACE_DEFAULT_SHLIB_MODE
          which can be controlled through config.h, but now it can also